# hw3

./: hw3-writeup.md  hw3.py  pyproject.toml
