[tool.poetry]
name = "cse163-hw3"
version = "0.1.0"
description = "Test starter code for CSE 163 - HW3"
authors = ["Hunter Schafer <hschafer@uw.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "3.8.4"
matplotlib = "3.4.2"
pandas = "1.2.3"
scikit-learn = "0.24.2"
seaborn = "0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"